Version 1.4.3:

* Support for "diff -uNp", "diff -uN --show-function-line=regexp",
  "cvs diff -uNp" and "cvs diff -uN  --show-function-line=regexp".

Version 1.4.2:

* Can now handle diffs which end in: "\ No newline at end of file".

* Changed the HTML generation for popup windows displaying old/new
  versions of a file to use <PRE> rather than a table, which cuts down
  the loading time considerably.  Note, the codestriker.css file had
  to be changed.

Version 1.4.1:

* Popup windows were not resizable in IE due to a bug in the
  javascript code.  Has now been fixed.

Version 1.4:

* Clicking on an original diff block line heading will open a popup
  window displaying colour-coded contents of the original file.
  Clicking on a new diff block line heading will open a popup window
  displaying colour-coded contents of the new file.  In each case, it
  is possible to click on topic lines to enter comments, which are
  done in the main browser window.

* The file names for each file block is now optionally hyperlinked to
  a CVS viewing system, such as cvs web.

* An optional bug number field is now a part of the topic creation
  form.  This is displayed in the view topic screen, with a link to
  the appropriate bug tracking (eg bugzilla) page.  Text within the
  description of the form "[Bb][Uu][Gg]\s*\d+" is also rendered to the
  appropriate bug tracking page.

* Comment emails sent now include the filename and line number
  (where possible) that the comment was made against.

* Creation date for a topic is shown in the view topic screen.

* Can download topic text as "text/plain" from view topic screen.

Version 1.3: 

* Included table of contents for coloured diff mode, which allows for
  fast nagivation, and indicates what files are present in the review.

* Added better handling of patch files.

Version 1.2:

* Converted to use CSS to reduce the resulting HTML size and to enable
  easier customisation.
